# MindMap

./: .gitignore  CMakeLists.txt  README.md  dev.sh  dev.yml  plan.org  setup.sh
docs/: attributes.md  dot_format_generation.md  mindmaps_format_spec.md
include/mindmap/: cmm.h  mm.hpp  utils.hpp
src/: CMakeLists.txt  cmm.c  cmm_int.h  grammar.y  mm.cpp  parser.c  parser.h  scanner.c  scanner.cpp  scanner.l  utils.cpp
tst/: CMakeLists.txt  test_dummy.cpp  test_mindmap_builder.cpp  test_parser.cpp  test_utils.cpp
tst/data/: test_mindmap.dot
